--- a/404.md
+++ b/404.md
@@ -7,13 +7,7 @@ language: de
 
 Es tut uns leid, aber die angeforderte Seite existiert nicht.
 
-Es sieht so aus als wäre es
+Es könnte eine falsch getippte Adresse oder ein veralteter Link sein.
 
-*	eine falsch getippte Adresse oder
-*	ein veralteter Link
-
-<script type="text/javascript">
-var GOOG_FIXURL_LANG = 'de',
-GOOG_FIXURL_SITE = 'http://abenteuer-irland.de';
-</script>
-<script type="text/javascript" src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
+Hier kommen Sie zur [Startseite](.), wo Sie versuchen können die
+gewünschten Informationen zu suchen.
